--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -27,6 +27,14 @@
 
     {{#block "scripts"}}
         <script src="/scripts/all.js" type="text/javascript" defer></script>
+        <script async defer type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false">
+        </script>
+        <script>
+            function showMailingPopUp() {
+                require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us15.list-manage.com","uuid":"cab168a4a2a3b04785ec39dd3","lid":"beae4168b3"}) })
+                document.cookie = 'MCEvilPopupClosed=;path=/;expires=Thu, 01 Jan 1970 00:00:00 UTC;';
+            };
+        </script>
     {{/block}}
 
 </head>
