--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -10,6 +10,8 @@
                 <span> - </span>
                 <a href="mailto:hpi-info@hpi.de?subject=Schul_Cloud%20Anfrage">Kontakt</a>
             </nobr>
+            <br>
+            <a href="#" id="open-popup" onclick="showMailingPopUp()">Newsletter anmelden</a>
         </div>
     </div>
 </footer>
