--- a/views/administration/teachers.hbs
+++ b/views/administration/teachers.hbs
@@ -18,6 +18,9 @@
                             <button type="submit" class="btn btn-primary btn-add">
                                 Lehrer hinzufügen
                             </button>
+                            <button class="btn btn-secondary btn-import">
+                                Lehrer importieren
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -33,6 +36,13 @@
                         {{> "administration/forms/form-teachers"}}
                     {{/content}}
                 {{/embed}}
+
+                {{#embed "lib/components/modal-form" action="/administration/teachers/import/" method="post" class="import-modal" enctype="multipart/form-data"}}
+                    {{#content "fields"}}
+                        {{> "administration/forms/form-import" roles="teacher"}}
+                    {{/content}}
+                {{/embed}}
+
 
             </section>
         </div>
