Move area label

--- a/views/lib/forms/form-helpdesk.hbs
+++ b/views/lib/forms/form-helpdesk.hbs
@@ -1,4 +1,7 @@
 <div class="form-group">
+<p class="control-label">Bereich: <span id="title-area"></span></p>
+</div>
+<div class="form-group">
     <label class="control-label" for="email">Ihre E-Mail-Adresse</label><span class="text-muted float-right"> (optional)</span>
     <input type="email"
            name="email"
