--- a/views/courses/components/run-lti-frame.hbs
+++ b/views/courses/components/run-lti-frame.hbs
@@ -1,4 +1,4 @@
-<script src="/scripts/jquery/jquery.min.js" type="text/javascript"></script>
+<script src="/scripts/all.js" type="text/javascript"></script>
 <script type="text/javascript">
     $(document).ready(function() {
         $("#ltiForm").submit();
