--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -27,6 +27,8 @@
 
     {{#block "scripts"}}
         <script src="/scripts/all.js" type="text/javascript" defer></script>
+        <script async defer type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false">
+        </script>
     {{/block}}
 
 </head>
