--- a/static/styles/calendar/calendar.scss
+++ b/static/styles/calendar/calendar.scss
@@ -95,3 +95,31 @@
         border-color: #ccc;
     }
 }
+
+.create-course-event {
+    label {
+        margin-right: 0.5rem;
+    }
+    .toggle {
+        height: 2rem !important;
+        width: 7rem !important;
+        .toggle-handle {
+            width: 0.3rem !important;
+            background: whitesmoke !important;
+        }
+    }
+
+    .off {
+        background: grey !important;
+        label {
+            color: whitesmoke !important;
+            padding-left: 48px !important;
+        }
+    }
+
+    .on {
+        label {
+            padding-right: 48px !important;
+        }
+    }
+}
