--- a/views/calendar/calendar.hbs
+++ b/views/calendar/calendar.hbs
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="/styles/calendar/fullcalendar.min.css"/>
         <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
         <link rel="stylesheet" href="/styles/calendar/calendar.css"/>
+        <link rel="stylesheet" href="/styles/lib/toggle/bootstrap-toogle.min.css"/>
     {{/content}}
 
     {{#content "scripts" mode="append"}}
@@ -23,13 +24,13 @@
             <div class="fullcalendar" id="calendar"></div>
         </div>
 
-        {{#embed "lib/components/modal-form" class="create-event-modal" action="/calendar/events/"}}
+        {{#embed "lib/components/modal-form" class="create-event-modal" action="/calendar/events/" collapseId=1}}
             {{#content "fields"}}
                 {{> "calendar/forms/form-create-event"}}
             {{/content}}
         {{/embed}}
 
-        {{#embed "lib/components/modal-form" method="put" class="edit-event-modal"}}
+        {{#embed "lib/components/modal-form" method="put" class="edit-event-modal" collapseId=2}}
             {{#content "fields"}}
                 {{> "calendar/forms/form-create-event"}}
             {{/content}}
