--- a/views/calendar/forms/form-create-event.hbs
+++ b/views/calendar/forms/form-create-event.hbs
@@ -23,3 +23,20 @@
     <label class="control-label" for="location">Ort</label>
     <input class="form-control" name="location" placeholder="z.B. Turnhalle">
 </div>
+{{#userHasPermission "COURSE_EDIT"}}
+<div class="form-group create-course-event">
+    <div class="checkbox disabled">
+        <label>
+            Für Kurs anlegen?
+            <input name="isCourseEvent" type="checkbox" data-collapseRef="collapse{{../collapseId}}" data-toggle="toggle" data-on="Ja" data-off="Nein">
+        </label>
+    </div>
+    <div id="collapse{{../collapseId}}" class="panel-collapse collapse">
+        <div class="form-group">
+            <select class="course-selection form-control" name="courseId">
+                <option value="" selected hidden>Wähle einen Kurs...</option>
+            </select>
+        </div>
+    </div>
+</div>
+{{/userHasPermission}}
