--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -1,4 +1,5 @@
 @import '../lib/colors.scss';
+@import url('http://vjs.zencdn.net/5.19.2/video-js.css');
 
 .route-files {
 
@@ -10,7 +11,7 @@
 
         .form-upload {
             width: 100%;
-            height: 200px;
+            height: 150px;
             border: 4px dashed #ddd;
             background: #f9f9f9;
             float: left;
@@ -119,6 +120,40 @@
         }
     }
 
+    .lightbox {
+        display: none;
+        position: fixed;
+        z-index: 999;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        top: 0;
+        left: 0;
+        background: rgba(0,0,0,0.8);
+        .link {
+            color: white;
+            font-size: 30px;
+            position: absolute;
+            margin-top: 30%;
+        }
+        .video-js {
+             margin: 2% auto;
+             max-width: 100%;
+             max-height: 100%;
+         }
+    }
+
+    .lightbox img {
+        max-width: 90%;
+        max-height: 90%;
+        margin-top: 2%;
+    }
+
+    .lightbox:target {
+        outline: none;
+        display: block;
+    }
+
     .files {
         width: 100%;
         float: left;
@@ -144,43 +179,6 @@
             &:hover {
                 box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
                 background: #f9f9f9;
-            }
-
-            .lightbox {
-                display: none;
-                position: fixed;
-                z-index: 999;
-                width: 100%;
-                height: 100%;
-                text-align: center;
-                top: 0;
-                left: 0;
-                background: rgba(0,0,0,0.8);
-                .link {
-                    color: white;
-                    font-size: 30px;
-                    position: absolute;
-                    margin-top: 30%;
-                }
-            }
-
-            .lightbox img {
-                max-width: 90%;
-                max-height: 90%;
-                margin-top: 2%;
-            }
-            .lightbox video {
-                max-width: 90%;
-                max-height: 90%;
-                margin-top: 2%;
-            }
-            .lightbox audio {
-                margin-top: 20%;
-            }
-
-            .lightbox:target {
-                outline: none;
-                display: block;
             }
 
             .file-preview {
