--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -105,14 +105,14 @@
                                                 width="80" height="80">
                                             </circular-progress>
                                             <div class="textinfo">
-                                                <span>Abgegeben: {{this.submissionStats}}</span><br/>
+                                                <span>Abgegeben: {{this.submissionStats}}</span>
                                                 <span>
                                                 {{#if this.gradedStats}}
                                                     Bewertet: {{this.gradedStats}}
                                                 {{else}}
                                                     Bewertet: -
                                                 {{/if}}
-                                                </span><br/>
+                                                </span>
                                                 <span>
                                                     {{#if this.averageRating}}
                                                         {{#if this.courseId.gradeSystem}}
