--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -86,7 +86,7 @@
                     <div class="row"><div class="col-lg-8">
                         {{#each assignments}}
                             <li class="card assignment {{this.privateclass}}" style="border-left:10px solid {{this.color}}">
-                                <a class="content" href="{{this.url}}"> 
+                                <a class="content" href="{{this.url}}" alt="Details der Aufgabe: '{{this.name}}'"> 
                                     <div class="dates">
                                         {{#if this.dueString}}
                                             <span class="{{this.dueColor}}">{{this.dueString}}</span>
@@ -97,7 +97,7 @@
                                     </div>
                                 </a>
                                 {{#if this.submissionStats}}
-                                    <a class="content" href="{{this.url}}#activetabid=submissions">
+                                    <a class="content" href="{{this.url}}#activetabid=submissions" alt="Abgaben der Aufgabe: '{{this.name}}'">
                                         <div class="state">
                                             <circular-progress class="meinel-progress" primarycolor="#b10438" secondarycolor="#61BD4F" accentcolor="#404F70"
                                                 data="{{this.submissionStatsPerc}}"
@@ -128,7 +128,7 @@
                                         </div>
                                     </a>
                                 {{/if}}
-                                <a class="content" href="{{this.url}}"> 
+                                <a class="content" href="{{this.url}}" alt="Details der Aufgabe: '{{this.name}}'"> 
                                     <h5 class="title">
                                         {{#if this.courseId}}
                                             <span>{{this.courseId.name}}</span>
@@ -146,17 +146,18 @@
                                                    href="{{this.link}}"
                                                    target="_blank"
                                                    data-method="delete-material"
-                                                   data-name="{{../name}}">
+                                                   data-name="{{../name}}"
+                                                   alt="Löschen der Aufgabe: '{{../name}}'.">
                                                     <i class="fa fa-{{this.icon}}"></i>
                                                 </a>
                                         {{else}}
-                                            <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}">
+                                            <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}" alt="Aufgabe '{{../name}}' {{this.alt}}.">
                                                 <i class="fa fa-{{this.icon}}"></i> {{this.label}}
                                             </a>
                                         {{/if}}
                                     {{/each}}
                                 {{/ifvalue}}
-                                <a href="{{this.url}}">
+                                <a href="{{this.url}}" alt="Details der Aufgabe: '{{this.name}}'">
                                     <span class="more">Details ><i className="fa fa-chevron-right" aria-hidden="true"></i></span>
                                 </a>
                             </li>
