--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -80,9 +80,8 @@
 
             <section class="file-viewer">
                 <a href="#_" class="lightbox" id="file-view" onclick="videojs('my-video').ready(function () {this.pause();});
-                                                                      document.getElementById('link').innerHTML = '';
-                                                                      document.getElementById('picture').src = '';
-                                                                      document.getElementById('my-video').style.display='none'">
+                                                                      $('#link').html('');
+                                                                      $('#picture').attr('src', '');">
                     <video id="my-video" class="video-js vjs-default-skin" onclick="videoClick(event);" autoplay controls preload="auto" data-setup="{'fluid': true}}"></video>
                     <script src="http://vjs.zencdn.net/5.19.2/video.js"></script>
                     <img id="picture">
