move to login.hbs

--- a/views/authentication/login.hbs
+++ b/views/authentication/login.hbs
@@ -6,6 +6,7 @@
 
     {{#content "scripts" mode="append"}}
         <script src="/scripts/login.js" type="text/javascript" defer></script>
+        <script type="text/javascript" src="https://s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false" defer></script>
     {{/content}}
 
     {{#content "body"}}
