--- a/views/lib/header.hbs
+++ b/views/lib/header.hbs
@@ -10,6 +10,9 @@
                     <a class="nav-link" href="https://blog.schul-cloud.org/faq" target="_blank">FAQ</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#" id="open-popup" onclick="showMailingPopUp()">Newsletter</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="https://hpi.de/open-campus/hpi-initiativen/schulcloud"
                        target="_blank">über Schul-Cloud</a>
                 </li>
