--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -1,5 +1,5 @@
 @import '../lib/colors.scss';
-@import url('http://vjs.zencdn.net/5.19.2/video-js.css');
+@import url('https://vjs.zencdn.net/5.19.2/video-js.css');
 
 .route-files {
 
