--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -83,7 +83,7 @@
                                                                       $('#link').html('');
                                                                       $('#picture').attr('src', '');">
                     <video id="my-video" class="video-js vjs-default-skin" onclick="videoClick(event);" autoplay controls preload="auto" data-setup="{'fluid': true}}"></video>
-                    <script src="http://vjs.zencdn.net/5.19.2/video.js"></script>
+                    <script src="https://vjs.zencdn.net/5.19.2/video.js"></script>
                     <img id="picture">
                     <div id="link"></div>
                 </a>
