add geogebra component to topic-editor

--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -87,5 +87,13 @@
             }
         }
     }
+
+    #content-blocks {
+        .btn-group {
+            .btn-secondary {
+                margin-right: 0.4rem;
+            }
+        }
+    }
 }
 
