--- a/views/topic/edit-topic.hbs
+++ b/views/topic/edit-topic.hbs
@@ -6,6 +6,7 @@
         <script src="/vendor/react/react-sortable-hoc.js" defer></script>
         <script src="/vendor/ckeditor/ckeditor.js" defer></script>
         <script src="/scripts/topic.js" defer></script>
+        <script src="/scripts/courses.js" defer></script>
     {{/content}}
 
     {{#content "styles" mode="append"}}
