--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -94,6 +94,11 @@
                 margin-right: 0.4rem;
             }
         }
+
+        #geo-gebra-info {
+            color: white;
+            background-color: $colorHPIRed;
+        }
     }
 }
 
