Implemented buttons for course to go to its files

--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -77,6 +77,11 @@
         .active {
             font-weight:bold;
         }
+
+        h5 {
+            width: auto;
+            float: left;
+        }
     }
 
     .directories {
