--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -111,14 +111,16 @@
                     {{/userHasPermission}}
                 </div>
             </div>
-
-            {{#userHasPermission "COURSE_EDIT"}}
-                <div class="row padding-top">
-                    <div class="col-sm-12">
+            <div class="row padding-top">
+                <div class="col-sm-12">
+                    {{#userHasPermission "COURSE_EDIT"}}
                         <a href="/courses/{{../_id}}/edit" class="btn btn-add btn-primary">Kurs bearbeiten</a>
-                    </div>
+                    {{/userHasPermission}}
+                    <a href="{{filesUrl}}" class="btn btn-add btn-secondary">Zu den Kurs-Dateien</a>
                 </div>
-            {{/userHasPermission}}
+            </div>
+
+
 
 
             {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
