--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -40,6 +40,10 @@
                                        href="{{this.url}}">{{this.label}}</a><span> / </span>
                                 {{/each}}
                             </h5>
+
+                            <a href="{{courseUrl}}" class="btn btn-secondary btn-sm btn-thin pull-right">
+                                Zum Kurs
+                            </a>
                         </div>
                     </div>
                 </div>
