--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -40,10 +40,11 @@
                                        href="{{this.url}}">{{this.label}}</a><span> / </span>
                                 {{/each}}
                             </h5>
-
-                            <a href="{{courseUrl}}" class="btn btn-secondary btn-sm btn-thin pull-right">
-                                Zum Kurs
-                            </a>
+                            {{#if courseUrl}}
+                                <a href="{{courseUrl}}" class="btn btn-secondary btn-sm btn-thin pull-right">
+                                    Zum Kurs
+                                </a>
+                            {{/if}}
                         </div>
                     </div>
                 </div>
