--- a/views/content/search.hbs
+++ b/views/content/search.hbs
@@ -33,7 +33,7 @@
                                         {{/each}}
                                     </select>
                                 </div>
-                                div class="col-sm-12 col-md-6">
+                                <div class="col-sm-12 col-md-6">
                                     <select name="filter[targetGroups.grade]"
                                             data-placeholder="Klassenstufe"
                                             class="select-subjects" multiple="multiple">
@@ -41,7 +41,7 @@
                                         <option value="8">8.</option>
                                         <option value="9">9.</option>
                                     </select>
-                                </div
+                                </div>
                             </div>
                         </div>
                     </div>
