disable content filters for now (#262)
* disable content filters for now

* Update search.hbs

--- a/views/content/search.hbs
+++ b/views/content/search.hbs
@@ -17,7 +17,8 @@
                                placeholder="Suche nach..."/>
                     </div>
                 </div>
-                <div class="card">
+                <!-- disable filter for now -->
+                <!--<div class="card">
 
                     <div class="card-block filters-attributes">
                         <div class="container-fluid no-padding">
@@ -32,7 +33,7 @@
                                         {{/each}}
                                     </select>
                                 </div>
-                                <!--div class="col-sm-12 col-md-6">
+                                <div class="col-sm-12 col-md-6">
                                     <select name="filter[targetGroups.grade]"
                                             data-placeholder="Klassenstufe"
                                             class="select-subjects" multiple="multiple">
@@ -40,11 +41,11 @@
                                         <option value="8">8.</option>
                                         <option value="9">9.</option>
                                     </select>
-                                </div-->
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
 
                 <button class="btn btn-primary float-right" type="submit">Suchen</button>
 
