--- a/views/authentication/login.hbs
+++ b/views/authentication/login.hbs
@@ -50,10 +50,14 @@
                                         {{/each}}
                                     </select>
                                 </div>
+
+                                <div class="form-group ">
+                                    <a class="btn btn-block btn-secondary btn-hide-providers">Mit Schul-Cloud Account anmelden</a>
+                                </div>
                             </div>
 
                             <div class="form-group">
-                                <input type="submit" class="btn btn-block btn-primary" value="Anmelden" />
+                                <input type="submit" class="btn btn-block btn-primary btn-login" value="Anmelden" />
                             </div>
                         </form>
 
