remove source button in ckeditor

--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -25,7 +25,7 @@
                     {name: 'colors', groups: ['colors']},
                     {name: 'about', groups: ['about']}
                 ],
-                removeButtons: 'Cut,Copy,Paste,PasteText,PasteFromWord,Redo,Undo,Scayt,Anchor,Maximize,Strike,Styles,Format,About'
+                removeButtons: 'Cut,Copy,Paste,PasteText,PasteFromWord,Redo,Undo,Scayt,Anchor,Maximize,Strike,Styles,Format,About,Source'
             });
             CKEDITOR.replace($('.edit-modal').find("textarea")[0], {
                 toolbarGroups: [
@@ -43,7 +43,7 @@
                     {name: 'colors', groups: ['colors']},
                     {name: 'about', groups: ['about']}
                 ],
-                removeButtons: 'Cut,Copy,Paste,PasteText,PasteFromWord,Redo,Undo,Scayt,Anchor,Maximize,Strike,Styles,Format,About'
+                removeButtons: 'Cut,Copy,Paste,PasteText,PasteFromWord,Redo,Undo,Scayt,Anchor,Maximize,Strike,Styles,Format,About,Source'
             });
 
             $.datetimepicker.setLocale('de');
