--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -22,7 +22,7 @@
         <link rel="apple-touch-icon" href= "/images/webapp.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-        <link rel="manifest" href="/manifest.json">
+        <link rel="manifest" href="/images/manifest.json">
         <link rel="stylesheet" href="/fonts/ptsans/ptsans.css" />
         <link rel="stylesheet" href="/fonts/fontawesome/fontawesome.css" />
         <link rel="stylesheet" href="/styles/lib/base.css" />
