--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -95,7 +95,7 @@
             }
         }
 
-        #geo-gebra-info {
+        .geo-gebra-info {
             color: white;
             background-color: $colorHPIRed;
         }
