--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -18,11 +18,11 @@
         <link rel="preload" href="/fonts/ptsans/ptsans-italic.woff" as="font" type="font/woff" crossorigin>
         <link rel="preload" href="/fonts/fontawesome/fontawesome-webfont.woff" as="font" type="font/woff" crossorigin>
         <link rel="preload" href="/images/hpi-logo.png" as="image" crossorigin>
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
         <link rel="apple-touch-icon" href= "/images/webapp.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-        <link rel="manifest" href="/manifest.json">
+        <link rel="manifest" href="/images/manifest.json">
         <link rel="stylesheet" href="/fonts/ptsans/ptsans.css" />
         <link rel="stylesheet" href="/fonts/fontawesome/fontawesome.css" />
         <link rel="stylesheet" href="/styles/lib/base.css" />
