--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -147,6 +147,11 @@
              max-width: 100%;
              max-height: 100%;
          }
+        .viweriframe {
+            width: 90%;
+            min-height: 900px;
+            height: 100%;
+        }
     }
 
     .lightbox img {
