--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -112,6 +112,7 @@
                                             </div>
                                             <a class="title">
                                                 {{this.name}}
+                                                {{this.type}}
                                             </a>
                                         </div>
                                         <div class="card-text">
@@ -155,6 +156,18 @@
                 </div>
             </section>
         </div>
+
+        {{#embed "lib/components/modal" class="open-modal" title="Möchtest du diese Datei mit einem Externen Dienst öffnen (Google/Microsoft)"}}
+            {{#content "body"}}
+                <div class="modal-body">
+                    <input type="checkbox" name="Check" value="save">Diese Auswahl Merken<br>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary btn-close">Abbrechen</button>
+                    <button type="submit" class="btn btn-primary btn-submit">Öffnen</button>
+                </div>
+            {{/content}}
+        {{/embed}}
 
 
         {{#embed "lib/components/modal-form" class="edit-modal" title="Neuer Ordner" closeLabel="Abbrechen" submitLabel="Ordner erstellen"}}
