--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -147,10 +147,10 @@
              max-width: 100%;
              max-height: 100%;
          }
-        .viweriframe {
+        .vieweriframe {
             width: 90%;
-            min-height: 900px;
-            height: 100%;
+            //min-height: 90%;
+            height: 90vh;
         }
     }
 
