--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -7,6 +7,7 @@
     {{#content "scripts" mode="append"}}
         <script src="/scripts/dropzone/dropzone.js" type="text/javascript" defer></script>
         <script src="/scripts/files.js" type="text/javascript" defer></script>
+        <script src="/scripts/jquery.cookie.js" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "page"}}
@@ -157,10 +158,10 @@
             </section>
         </div>
 
-        {{#embed "lib/components/modal" class="open-modal" title="Möchtest du diese Datei mit einem Externen Dienst öffnen (Google/Microsoft)"}}
+        {{#embed "lib/components/modal" class="open-modal" title="Möchtest du diese Datei mit einem Externen Dienst öffnen?"}}
             {{#content "body"}}
                 <div class="modal-body">
-                    <input type="checkbox" name="Check" value="save">Diese Auswahl Merken<br>
+                    <input class="box" type="checkbox" name="allowExternalViewers" value="save">Diese Auswahl merken<br>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary btn-close">Abbrechen</button>
