add mathjax to ck-editor

--- a/views/homework/assignment.hbs
+++ b/views/homework/assignment.hbs
@@ -59,7 +59,9 @@
                     {name: 'colors', groups: ['colors']},
                     {name: 'about', groups: ['about']}
                 ];
-                config.removeButtons = 'Cut,Copy,Paste,PasteText,PasteFromWord,Redo,Undo,Scayt,Anchor,Maximize,Strike,Styles,Format,About';
+                config.mathJaxLib = 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_HTML',
+                config.extraPlugins = 'mathjax',
+                config.removeButtons = 'Cut,Copy,Paste,PasteText,PasteFromWord,Redo,Undo,Scayt,Anchor,Maximize,Strike,Styles,Format,About,Source';
             });
         });
     </script>
