--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -12,6 +12,7 @@
         <script type="text/javascript" src="/scripts/notificationService/indexFirebase.js" defer></script>
 
         <script type="text/javascript" src="/scripts/notificationService/callback.js" defer></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_HTML" defer></script>
         <script type="text/javascript" src="/scripts/notificationService/index.js" defer></script>
 
         <script type="text/javascript">
