Implmeneted Material search in topic editor and fixed some bugs

--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -102,3 +102,12 @@
     }
 }
 
+.btn-remove-resource {
+    float: right;
+    cursor: pointer;
+
+    i {
+        color: $colorHPIRed;
+    }
+}
+
