--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -184,6 +184,10 @@ header {
     float:left;
 }
 
+.window-inline .content-wrapper {
+    padding: 20px !important;
+}
+
 .content-wrapper {
     width: 100%;
     min-height:calc(100vh - 104px);
