--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -1,4 +1,4 @@
-<footer>
+<footer class="hide-inline">
     <div class="imprint">
         <div class="center">
             <img src="/images/hpi-logo.png" width="235" height="44" />
