--- a/views/topic/topic.hbs
+++ b/views/topic/topic.hbs
@@ -9,13 +9,13 @@
         <section class="section-course">
             {{#each contents}}
                 {{#unless hidden}}
-                <div class="row">
-                    <div class="col-md-6 col-sm-10 col-xs-12">
-                        <div class="content-block">
-                            {{> (lookup . 'component') }}
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <div class="content-block">
+                                {{> (lookup . 'component') }}
+                            </div>
                         </div>
                     </div>
-                </div>
                 {{/unless}}
             {{/each}}
 
